<resources>
    <string name="app_name">WeBall-Statistics</string>

    <!-- String Label for TabContainer Matches -->
    <string name="matches_tab_container">Matches</string>

    <!-- Strings used for Tab for Matches -->
    <string name="previous_matches_tab_text">Previous Matches</string>
    <string name="live_matches_tab_text">Live Matches</string>
    <string name="upcoming_matches_tab_text">Upcoming Matches</string>

    <!-- Strings used for fragments for navigation -->
    <string name="live_game_tab_text">Progress</string>
    <string name="live_comments_tab_text">Comments</string>
    <string name="live_statistics_tab_text">Statistics</string>

    <!--    String Label for TabContainer-->
    <string name="tab_container_Label">Live Game</string>

    <!--    Live Game Strings-->
    <string name="score_text">164 - 182</string>
    <string name="team1_name_text">Team</string>
    <string name="team2_name_text">Team 2</string>
    <string name="game_live_text">Game</string>
    <string name="clock_text">32:45</string>
    <string name="view_players_live_statistics_button_text">View Players Live Statistics</string>
    <string name="team_logo_description">Team Logo</string>
    <string name="match_start_date_text">10/06/2020 16:00</string>
    <string name="time_text">8.28\'</string>
    <string name="action_small_desc_landlord_text">+3 (G. Antetokounmpo)</string>
    <string name="statistic_name_text">Statistic Name</string>
    <string name="team1_progress_text">0</string>
    <string name="team2_progress_text">0</string>
    <string name="time_happened_guest_text">9.30\'</string>
    <string name="action_small_desc_guest_text">(G. Antetokounmpo) +3</string>
    <string name="quarter_text">Quarter</string>
    <string name="time_happened_comment_text">3.45\'</string>
    <string name="comment_text">CommentCommentCommentCommentCommentCommentCommentCommentCommentCommentComment</string>
    <string name="head_referee_text">Referee</string>
    <string name="stadium_text">Stadium/City</string>
    <string name="head_referee_name_text">Vissel L.</string>
    <string name="stadium_name_text">OAKA</string>
    <string name="match_info_label_text">Match Information</string>

    <string-array name="team_statistics">
        <item>Successful_effort</item>
        <item>Total_effort</item>
        <item>Successful_freethrow</item>
        <item>Total_freethrow</item>
        <item>Successful_twopointer</item>
        <item>Total_twopointer</item>
        <item>Successful_threepointer</item>
        <item>Total_threepointer</item>
        <item>Steal</item>
        <item>Assist</item>
        <item>Block</item>
        <item>Rebound</item>
        <item>Foul</item>
        <item>Turnover</item>
    </string-array>

    <string-array name="player_statistics">
        <item>Successful effort</item>
        <item>Total effort</item>
        <item>Successful freethrow</item>
        <item>Total freethrow</item>
        <item>Successful twopointer</item>
        <item>Total twopointer</item>
        <item>Successful threepointer</item>
        <item>Total threepointer</item>
        <item>Steal</item>
        <item>Assist</item>
        <item>Block</item>
        <item>Rebound</item>
        <item>Foul</item>
        <item>Turnover</item>
    </string-array>


    <string-array name="teams_in_match">
        <item name="team1">Team 1</item>
        <item name="team2">Team 2</item>
    </string-array>

    <!-- Strings for Progress -->
    <string name="match_start">Start of the Match</string>
    <string name="match_pause">Match paused!</string>
    <string name="match_completed">Match completed!</string>
    <!-- Correction by admin ??-->
    <string name="current_period">%1$s period</string> <!-- 1 || 2 || 3 || 4 as parameters-->
    <string name="shot_1_in">A well-aimed shot by %1$s!</string> <!-- The name of the player who scores as parameter -->
    <string name="shot_1_missed">Missed shot by %1$s!</string> <!-- The name of the player who miss the shot as parameter -->
    <string name="shot_2_in">A well-aimed 2 points shot by %1$s! %2$s</string> <!-- The name of the player who scores as parameter and the name of the player who assists if exists-->
    <string name="shot_3_in">A well-aimed 3 points shot by %1$s! %2$s</string> <!-- The name of the player who scores as parameter and the name of the player who assists if exists-->
    <string name="foul_done">Foul by %1$s!</string> <!-- The name of the player who does the foul as parameter -->
    <string name="rebound_done">Rebound by %1$s!</string> <!-- The name of the player who gets the rebound as parameter -->
    <string name="block_done">Block by %1$s!</string> <!-- The name of the player who achieves the block as parameter -->
    <string name="ball_stolen">Ball was stolen by %1$s!</string> <!-- The name of the player who achieves the steal as parameter -->
    <string name="ball_lost">Loss of the ball by mistake</string>
    <string name="substitution">Substitution (%1$s in %2$s)</string>
    <string name="time_happened_general_text">0.01\'</string>
    <string name="action_desc_general_text">Match Started!</string>
    <string name="player_name">player name</string> <!-- The names of the two players -->
    <string name="Continue_Guest">Continue as a Guest</string>
    <string name="Login_Admin">Login as Admin</string>
    <string name="Welcome_ESAKE">Welcome to ESAKE</string>
    <string name="Username">Username</string>
    <string name="Login">Login</string>

    <string name="basket_made">Basket made?</string>
    <!-- Strings used for fragments for navigation -->
    <string name="statsTabContainer">Championship Statistics</string>
    <string name="home_fragment_text">Hello home fragment</string>
    <string name="home_fragment_label">Home</string>
    <string name="playerStatsTab">Players Stats</string>
    <string name="teamStatsTab">Team Stats</string>
    <string name="playerStats">playerStats</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="statTitle">Statistic Title</string>
    <string name="rank">Rank</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="championship_statistics_btn_text">Championship Leaderboard</string>
    <string name="textviewPlayer_text">PlayerName</string>
    <string name="substitutionsTittle_text">Substitutions</string>
    <string name="playersTittle_text">Players</string>
    <string name="message_no_actions_text">Match will start soon!</string>
    <string name="time_comment_text">0.15\'</string>
    <string name="comment_text_home">TextViewTextViewTextViewTextViewTextView TtViewTextView</string>

    <!-- Strings for Comments -->
    <!-- display something more times because i want to be the most common description  -->
    <string-array name="matchStart">
        <item>Finally, the curtain opens on the field!</item>
        <item>It\'s time to start the game, with the referee whistling</item>
        <item>It\'s time to start the game, with the referee whistling</item>
        <item>It\'s time to start the game, with the referee whistling</item>
    </string-array>
    <string-array name="matchPause">
        <item>The coach asks for time out, to organize his players</item>
        <item>There is a pause in the flow of the match!</item>
        <item>The referee decided that the match should be paused.</item>
        <item>The referee decided that the match should be paused.</item>
        <item>The match was paused</item>
        <item>The match was paused</item>
    </string-array>
    <string-array name="matchResume">
        <item>The match continues again</item>
        <item>The referee whistles for the resume of the match</item>
        <item>The referee whistles for the resume of the match</item>
        <item>The referee whistles for the resume of the match</item>
        <item>After this short timeout, the match resumes</item>
        <item>After this sort pause, the match resumes</item>
    </string-array>
    <string-array name="matchCompleted">
        <item>The referee whistles the end of the match!</item>
        <item>The referee whistles the end of the match!</item>
        <item>We have reached the end of the match. What can be the continuation of the championship?</item>
        <item>The match is over!</item>
        <item>It\'s time for the referee to whistle at the end of the match!</item>
        <item>It\'s time for the referee to whistle at the end of the match!</item>
    </string-array>
    <string-array name="steal">
        <item>Clever steal by</item>
        <item>Fast steal by</item>
        <item>He read the opponents and the ball was stolen by</item>
        <item>The ball was suddenly stolen by</item>
    </string-array>
    <string-array name="block">
        <item>Great block by</item>
        <item>Fantastic block by</item>
        <item>Amazing block by</item>
        <item>Important block by</item>
        <item>Great block by</item>
        <item>The score remains the same due to the amazing block made by</item>
    </string-array>
    <string-array name="foul">
        <item>Hard foul by</item>
        <item>An unnecessary foul was made by</item>
        <item>Dangerous foul done by</item>
        <item>Fast foul on the counterattack was occurred by</item>
        <item>This is a clever foul by</item>
    </string-array>
    <string-array name="freethrow_in">
        <item>A well-aimed shot by</item>
        <item>+1 point for his team, by the accurate shot of</item>
    </string-array>
    <string-array name="freethrow_out">
        <item>Missed shot-freethrow by</item>
        <item>Bad shot by</item>
        <item>The score remains the same from the missed free throw of</item>
        <item>The score remains the same from the missed free throw of</item>
    </string-array>
    <string-array name="twopointer_in">
        <item>Necessary aimed two points shot by</item>
        <item>Important aimed two points shot by</item>
        <item>Two points more scored by</item>
        <item>Two points more scored by</item>
        <item>Aimed two points shot scored by</item>
        <item>Aimed two points shot scored by</item>
    </string-array>
    <string-array name="twopointer_out">
        <item>Missed two points shot by</item>
        <item>Missed two points shot by</item>
        <item>Missed two points shot by</item>
        <item>The score remains the same from the missed two points shot of</item>
    </string-array>
    <string-array name="threepointer_in">
        <item>Necessary three points scored by</item>
        <item>Important three points scored by</item>
        <item>Three points more scored by</item>
        <item>Aimed three points shot scored by</item>
        <item>Excellent three-point basket by</item>
        <item>Amazing three-point basket by</item>
        <item>Great three-point basket by</item>
        <item>Unstoppable three-point basket by</item>
        <item>Unrepeatable three-point basket by</item>
    </string-array>
    <string-array name="threepointer_out">
        <item>Missed three points shot by</item>
        <item>Missed three points shot by</item>
        <item>Missed three points shot by</item>
        <item>The score remains the same from the missed three points shot of</item>
    </string-array>
    <string-array name="substitution">
        <item>The coach changes the squad of his team</item>
        <item>The coach changes his strategy</item>
        <item>The coach asked for a substitution</item>
    </string-array>
    <string-array name="turnover">
        <item>Loss of possession due to a mistake by</item>
        <item>Fatal mistake by</item>
        <item>Significant mistake by</item>
        <item>A mistake at a critical point was noted by</item>
        <item>Mistake done by</item>
    </string-array>
</resources>