<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_to_white_color">

    <TextView
        android:id="@+id/head_referee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/head_referee_text"
        app:layout_constraintBottom_toBottomOf="@+id/ref_icon"
        app:layout_constraintStart_toEndOf="@+id/ref_icon"
        app:layout_constraintTop_toTopOf="@+id/ref_icon" />

    <TextView
        android:id="@+id/stadium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/stadium_text"
        app:layout_constraintBottom_toBottomOf="@+id/stadium_icon"
        app:layout_constraintStart_toEndOf="@+id/stadium_icon"
        app:layout_constraintTop_toTopOf="@+id/stadium_icon" />

    <ImageView
        android:id="@+id/stadium_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toStartOf="@+id/stadium"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ref_icon"
        app:srcCompat="@drawable/basketball_field_30px" />

    <ImageView
        android:id="@+id/ref_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        app:layout_constraintEnd_toStartOf="@+id/head_referee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/match_info_label"
        app:srcCompat="@drawable/referee_30px" />

    <TextView
        android:id="@+id/head_referee_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/head_referee_name_text"
        app:layout_constraintBottom_toBottomOf="@+id/head_referee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/head_referee"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/stadium_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/stadium_name_text"
        app:layout_constraintBottom_toBottomOf="@+id/stadium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/stadium" />

    <TextView
        android:id="@+id/match_info_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/match_info_label_text"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/divider_match_info"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="6dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stadium_icon"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>